# linear_algebra_benchmark

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml  clang_format.yml  docker_and_coverage.yaml  docker_and_coverage.yml  mac.yml  ubuntu.yml  windows.yml
cmake/: CodeCoverage.cmake  dependencies.cmake  test_util.cmake
docker/: Dockerfile.benchmark  Dockerfile.clang-tidy  Dockerfile.coverage  Dockerfile.intel  Dockerfile.memcheck  Dockerfile.nvhpc  Dockerfile.unit
include/: CMakeLists.txt  naive_trid_solver.hpp  naive_trid_solver.inl  test_util.hpp  test_utils.hpp  trid_matrix.hpp  trid_matrix.inl  trid_solver.inl
include/tridiagonal_matrix/: trid_matrix.hpp  trid_matrix.inl  trid_solver.hpp  trid_solver.inl
test/: CMakeLists.txt  valgrind.supp
test/benchmark/: CMakeLists.txt  test_naive_trid_matrix_solver.cpp  test_trid_matrix_solver.cpp
test/performance/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_naive_trid_matrix_solver.cpp  test_trid_matrix_solver.cpp
